--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated"
+          >Discover our tours</a
+        >
       </div>
     </header>
 
@@ -174,7 +176,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most Popular Tours</h2>
         </div>
@@ -205,7 +207,7 @@
                     <p class="card__price--only">Only</p>
                     <p class="card__price--value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -235,7 +237,7 @@
                     <p class="card__price--only">Only</p>
                     <p class="card__price--value">$497</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -265,7 +267,7 @@
                     <p class="card__proce--only">Only</p>
                     <p class="card__price--value">$897</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -448,10 +450,30 @@
       </div>
     </footer>
 
-    <div class="popup">
+    <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__left">
-          <img src="img/nat-8.jpg" alt="" />
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, sequi
+            illum quia minus deserunt iste sint dolore minima adipisci, delectus
+            explicabo earum quidem repudiandae, dicta commodi veritatis nemo
+            eaque eligendi? Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Qui porro rerum perspiciatis omnis eveniet cumque dolores sed,
+            voluptatem aliquam odit quas hic nisi adipisci animi nesciunt
+            officiis magni dicta harum.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
         </div>
       </div>
     </div>
